--- a/frontend/src/app/congratulation/congratulation.component.html
+++ b/frontend/src/app/congratulation/congratulation.component.html
@@ -19,7 +19,7 @@
             <div class="border"></div>
             <div class="medal-box"><i class="fas fa-medal"></i></div>
             <h1>EK AUR SAWAAL 2023</h1>
-            <h2>Team Miraki</h2>
+            <h2>Team Meraki</h2>
             <div class="winner-ribbon">WINNER</div>
             <div class="right-ribbon"></div>
             <div class="left-ribbon"></div>
